# c-exercises

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/homework/: CMakeLists.txt
src/homework/2-simple/: library.c  library.h
src/homework/Class10_homework/exercise_5.1_preprocessor/: .gitignore  CMakeLists.txt  README.md  environment.yml
src/homework/Class10_homework/exercise_5.1_preprocessor/include/: welcome.h
src/homework/Class10_homework/exercise_5.1_preprocessor/src/: main.c  welcome.c
src/homework/Class10_homework/exercise_5.1_preprocessor/test/: test_welcome.c
src/homework/Class11_homework/: CMakeLists.txt  Class11_homework.c  exercise1_error_handling.c  exercise2_logging_system.c  exercise3_colored_logger.c  log.txt
src/homework/Class12_homework/: CMakeLists.txt  exercise1_print_bits.c  exercise2_negative_integers.c  exercise3_netf_macro.c  hell_no_fast_inverse_sqrt.c
src/homework/Class13_homework/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h  linked_list.c  linked_list.h  main.c  main_doubly.c
src/homework/Class2_homework/: CMakeLists.txt  main.c
src/homework/Class3_homework/: CMakeLists.txt  errors.c
src/homework/Class4_homework/: CMakeLists.txt
src/homework/Class4_homework/include/: name_length.h
src/homework/Class4_homework/src/: CMakeLists.txt  main.c  name_length.c
src/homework/Class4_homework/tests/: CMakeLists.txt  test_name_length.c
src/homework/Class5_6_homework/big_boy_malloc/: CMakeLists.txt
src/homework/Class5_6_homework/big_boy_malloc/include/: library.h
src/homework/Class5_6_homework/big_boy_malloc/src/: library.c  main.c
src/homework/Class5_6_homework/big_boy_malloc/tests/: CMakeLists.txt  test_library.c
src/homework/Class5_6_homework/milestones/: CMakeLists.txt  milestone1_pointer_basics.c  milestone2_memory_layout1.c  milestone3_memory_layout2.c  milestone4_memory_layout3.c  milestone5_casting1.c  milestone6_casting2.c  milestone7_string_concat.c  milestone8_malloc_fun.c  privilege_escalation.c
src/homework/Class7_homework/: CMakeLists.txt
src/homework/Class7_homework/include/: rectangle.h
src/homework/Class7_homework/src/: main.c  rectangle.c
src/homework/Class7_homework/tests/: CMakeLists.txt  test_rectangle.c
src/homework/Class8_homework/: CMakeLists.txt  pg2701.txt  zipf.c
src/lessons/4-unit-testing/: 2-unit-test-library.c  CMakeLists.txt  library.c  library.h
src/lessons/5-pointers/: 1-pointers.c  10-casting.c  11-void.c  12-punning.c  2-alias.c  3-arithmetics.c  4-square-brackets.c  5-passing.c  6-const.c  7-const2.c  8-auto.c  9-nested.c  CMakeLists.txt
src/lessons/6-dynamic-memory/: 1-stack.c  2-malloc.c  3-calloc.c  4-realloc.c  5-leak.c  6-leak2.c  CMakeLists.txt
src/lessons/7-struct/: 1-struct.c  2-struct2.c  3-struct3.c  4-pointers.c  5-time.c  6-size.c  7-size2.c  8-union.c  9-union2.c
