
add_executable(1-pointers 1-pointers.c)
add_executable(2-alias 2-alias.c)
add_executable(3-arithmetics 3-arithmetics.c)
add_executable(4-square-brackets 4-square-brackets.c)
add_executable(5-passing 5-passing.c)
add_executable(6-const 6-const.c)
add_executable(7-const2 7-const2.c)
add_executable(8-auto 8-auto.c)
add_executable(9-nested 9-nested.c)
add_executable(10-casting 10-casting.c)
add_executable(11-void 11-void.c)
add_executable(12-punning 12-punning.c)
